deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: softserve
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: softserve
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: softserve
    spec:
      hostname: git
      containers:
        - image: charmcli/soft-serve:latest
          name: softserve
          volumeMounts:
          - name: softserve-data
            mountPath: /data
          ports:
          - containerPort: 80
            name: http
            protocol: TCP
          - containerPort: 9418
            name: git
            protocol: TCP
          - containerPort: 22
            name: ssh
            protocol: TCP
          - containerPort: 23233
            name: stats
            protocol: TCP
          resources:
            requests:
              cpu: 100m 
              memory: 256Mi
      restartPolicy: Always
      volumes:
      - name: softserve-data
        persistentVolumeClaim:
          claimName: softserve-data
